--- a/styles/style.css
+++ b/styles/style.css
@@ -29,11 +29,13 @@
 }
 
 .batman img {
-    width: 60%;
-    max-width: 500px;
+    max-width: 300px;
+    max-height: 457px;
     border: 3px solid darkgoldenrod;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
     margin-bottom: 30px;
+    width: 660px;
+    height: 1006px;
 }
 
 
@@ -56,6 +58,7 @@
 .characters {
     padding-top:10px;
     padding-bottom:10px;
+    min-height: 600px;
 }
 
 .characters h1 {
@@ -106,6 +109,7 @@
 }
 
 #character-list li img {
+    max-width: 100%;
     width: 90px;
     height: 90px;
     object-fit: cover;
@@ -204,8 +208,8 @@
     }
 
     .batman img {
-        width: 100%;
         max-width: 500px;
+        max-height: 762px;
         align-self: flex-start;
     }
 
